--- a/src/client/partials/home.html
+++ b/src/client/partials/home.html
@@ -2,3 +2,14 @@
 <p>
   1 + 3 = {{ 1 + 3 }}
 </p>
+
+<p>
+  <p>
+    Hello!  My name is {{ mike d | capitalize }}.
+  </p>
+</p>
+
+<input type="text" ng-model="test.myString" />
+<h2>
+  {{ test.myString | capitalize }}
+</h2>
